--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ section {
   gap: 1.5rem;
 }
 .services .box-container .box {
-  background: #B8B8B8;
+  background: #b8b8b8;
   padding: 3rem;
   text-align: center;
   border-radius: 33% 67% 70% 30%/30% 30% 70% 70%;
@@ -395,7 +395,7 @@ section {
 }
 .services .box-container .box h3 {
   font-size: 2.2rem;
-  color: #0A0A0A;
+  color: #0a0a0a;
   padding: 1rem 0;
 }
 
@@ -410,7 +410,7 @@ section {
   border-radius: 0.5rem;
   position: relative;
   margin-bottom: 2rem;
-  background: #B8B8B8;
+  background: #b8b8b8;
 }
 .plan .box-container .box .btn {
   position: static;
@@ -488,7 +488,8 @@ section {
   padding-bottom: 1rem;
   color: #130f40;
 }
-.contact form .box, .contact form textarea {
+.contact form .box,
+.contact form textarea {
   width: 100%;
   border-bottom: 0.2rem solid #130f40;
   border-width: 0.1rem;
@@ -591,4 +592,10 @@ section {
   .header .login-form {
     width: 90%;
   }
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
+
+.home .content h3 {
+  font-size: 6rem;
+  color: rgb(207, 18, 18) !important;
+  padding-bottom: 1rem;
+}
